# robot_library

./: README.md  SCRIPT_README.md  ros_source_packages_install_script.sh
gobot_msg_srv/: CMakeLists.txt  README.md  package.xml
gobot_msg_srv/include/gobot_msg_srv/: get_robot_class.h  robot_command.h  robot_move_class.h  robot_msgs.h  set_robot_class.h
gobot_msg_srv/msg/: AllSensorsMsg.msg  BumperMsg.msg  CliffMsg.msg  GyroMsg.msg  IrMsg.msg  LedMsg.msg  MotorSpeedMsg.msg  ProximityMsg.msg  SonarMsg.msg  SoundMsg.msg  WeightMsg.msg
gobot_msg_srv/src/: get_robot_class.cpp  robot_command.cpp  robot_move_class.cpp  set_robot_class.cpp
gobot_msg_srv/srv/: GetEncoders.srv  IsCharging.srv  LedStrip.srv  Port.srv  PortLaser.srv  RecoveredPosition.srv  SendMap.srv  SendMessageToPc.srv  SetBattery.srv  SetInt.srv  SetStringArray.srv
gobot_msgs/: CMakeLists.txt  package.xml
gobot_msgs/include/gobot_msgs/: get_robot_class.h  robot_command.h  robot_move_class.h  robot_msgs.h  robot_status_setter.hpp  set_robot_class.h
gobot_msgs/msg/: AlignmentMsg.msg  AllSensorsMsg.msg  BatteryMsg.msg  CliffMsg.msg  EncodersMsg.msg  HumanDetectionMsg.msg  NavJob.msg  NavTask.msg  NavTaskAck.msg  NavTaskList.msg  NavTaskProgress.msg  OutputPinArrayMsg.msg  Polygon.msg  PolygonArray.msg  PoseWithTolerance.msg  SonarMsg.msg  TaskMetadata.msg
gobot_msgs/src/: get_robot_class.cpp  robot_command.cpp  robot_move_class.cpp  robot_status_setter.cpp  set_robot_class.cpp
gobot_msgs/srv/: ExecuteNavTask.srv  GetAllProhibitionPolygons.srv  GetGobotStatus.srv  GetIntArray.srv  GetPose.srv  GetPoseWithCovariance.srv  InitBack.srv  PauseFaceDetection.srv  PauseWork.srv  ProhibitionArea.srv  SendMap.srv  SetAllProhibitionPolygons.srv  SetErrorChecker.srv  SetGUIDiagnosticLevel.srv  SetGUIHealthReportLevel.srv  SetGobotStatus.srv  SetIntArray.srv  SetLoopCount.srv  SetNavTaskLoop.srv  SetPath.srv  SetPoseWithCovariance.srv  SetSpeeds.srv  UpdateNavTaskList.srv
robot_lib_test/: CMakeLists.txt  README.md  package.xml
robot_lib_test/launch/: hardware_test.launch  localization_map_test.launch  obstacle_detection_avoidance_test.launch  point_route_test.launch
robot_lib_test/params/: robot_lib_params.yaml
robot_lib_test/src/: hardware_test.cpp  localization_map_test.cpp  obstacle_detection_avoidance_test.cpp  point_route_test.cpp
